<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.membership.LoginActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_id_edit_text"
        app:lottie_url="@string/login_lottie_animation_url"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />
    <EditText
        android:id="@+id/user_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email" />
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        />
    <Button
        android:id="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/signup_button"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:textColor="?android:textColorPrimary"
        android:text="@string/sign_up"/>
</androidx.constraintlayout.widget.ConstraintLayout>