<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/user_id_edit_text"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="Sign Up" />
    <EditText
        android:id="@+id/user_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/user_id_error_text_view"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email" />
    <TextView
        android:id="@+id/user_id_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:text="* Invalid email"
        android:textColor="@color/design_default_color_error"
        />
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_error_text_view"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        />
    <TextView
        android:id="@+id/password_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_confirmedit_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:text="* Invalid password"
        android:textColor="@color/design_default_color_error"
        />
    <EditText
        android:id="@+id/password_confirmedit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_confirm_error_text_view"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_your_password"
        />
    <TextView
        android:id="@+id/password_confirm_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:text="* Invalid password"
        android:textColor="@color/design_default_color_error"
        />
    <Button
        android:id="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>